--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="base::layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	th:replace="base::layout(~{::section})">
 <head>
-    <meta charset="UTF-8" />
-    <title>about page</title>
+<meta charset="UTF-8" />
+<title>about page</title>
 </head>
 <body>
-    <section>
-        <h1>this is about page</h1>
-        <h1>we are building springboot project</h1>
-    </section>
+	<section>
+		<h1>this is about page</h1>
+		<h1>we are building springboot project</h1>
+	</section>
 </body>
 </html>
