--- a/src/main/resources/templates/normal/contact_details.html
+++ b/src/main/resources/templates/normal/contact_details.html
@@ -1,75 +1,96 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="normal/base::layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	th:replace="normal/base::layout(~{::section})">
 <head>
-    <meta charset="UTF-8" />
-    <title>Contact Details</title>
-    <!-- Include Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap 4 CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <!-- Bootstrap and jQuery scripts -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-pzjw8/0YHz9O1sOSSu2HyiBAAO4ws4xqjBO9KqH9K9pLlNKHfQ8n9XtaRXNXG4U" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjI1z9IVBBDOh/UnL4a4ncgqCEx1XDP" crossorigin="anonymous"></script>
-    
+<meta charset="UTF-8" />
+<title>Contact Details</title>
+<!-- Include Bootstrap CSS -->
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+	rel="stylesheet">
+<!-- Bootstrap 4 CDN -->
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<!-- Bootstrap and jQuery scripts -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+	integrity="sha384-pzjw8/0YHz9O1sOSSu2HyiBAAO4ws4xqjBO9KqH9K9pLlNKHfQ8n9XtaRXNXG4U"
+	crossorigin="anonymous"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjI1z9IVBBDOh/UnL4a4ncgqCEx1XDP"
+	crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <section>
-        <div class="my-container " th:if=${contact} style="
-    margin-left: 250px;
-"> <!-- Use the new class name -->
-            <div class="M_card text-center">
-                <div class="image-container">
-                    <img class="My_profile_pic" style="height:200px;width:200px;" th:if="${contact.base64Image != null}" th:src="|data:image/jpeg;base64,${contact.base64Image}|" alt="Contact Image" />
-                    <img id="imageElement" th:unless="${contact.base64Image != null}" th:src="@{/static/image/contact1.jpg}" alt="Default Image" />
-                </div>
-                <table>
-                	<tr>
-                        <th>Id</th>
-                        
-                        <td th:text="${contact.cid}"></td>
-                    </tr>
-                    <tr>
-                        <th>Name</th>
-                        <td th:text="${contact.name}"></td>
-                    </tr>
-                    <tr>
-                        <th>Second Name</th>
-                        <td th:text="${contact.secondName}"></td>
-                    </tr>
-                    <tr>
-                        <th>Email</th>
-                        <td th:text="${contact.email}"></td>
-                    </tr>
-                    <tr>
-                        <th>Phone</th>
-                        <td th:text="${contact.phone}"></td>
-                         
-                    </tr>
-                    
-                    
-                </table>
-                <!-- Add action buttons if needed -->
-                <div>
-                	
-	  				<form th:action="@{'/myuser/update/'+${contact.cid}}" method="post" id="updateForm" class="d-inline">
-					    <button type="button" class="btn btn-warning" th:onclick="'return confirmAndUpdate(\'' + ${contact.cid} + '\');'">Update</button>
-					</form>
-	  				
+	<section>
+		<div class="my-container " th:if=${contact}
+			style="margin-left: 250px;">
+			<!-- Use the new class name -->
+			<div class="M_card text-center">
+				<div class="image-container">
+					<img class="My_profile_pic" style="height: 200px; width: 200px;"
+						th:if="${contact.base64Image != null}"
+						th:src="|data:image/jpeg;base64,${contact.base64Image}|"
+						alt="Contact Image" /> <img id="imageElement"
+						th:unless="${contact.base64Image != null}"
+						th:src="@{/static/image/contact1.jpg}" alt="Default Image" />
+				</div>
+				<table>
+					<tr>
+						<th>Id</th>
 
-				    
-                    <a th:href="@{'/myuser/delete/'+${contact.cid}}"
-                        class="btn btn-danger"
-                        th:onclick="'return confirmDelete(\'' + ${contact.cid} + '\');'">Delete</a>
-                </div>
-                
-                   
-                
-            </div>
-             
-            
-        </div>
-           <h2 class="text-center" th:unless=${contact}>you can't access other contacts without permission</h2>
-    </section>
+						<td th:text="${contact.cid}"></td>
+					</tr>
+					<tr>
+						<th>Name</th>
+						<td th:text="${contact.name}"></td>
+					</tr>
+					<tr>
+						<th>Second Name</th>
+						<td th:text="${contact.secondName}"></td>
+					</tr>
+					<tr>
+						<th>Email</th>
+						<td th:text="${contact.email}"></td>
+					</tr>
+					<tr>
+						<th>Phone</th>
+						<td th:text="${contact.phone}"></td>
+
+					</tr>
+
+
+				</table>
+				<!-- Add action buttons if needed -->
+				<div>
+
+					<form th:action="@{'/myuser/update/'+${contact.cid}}" method="post"
+						id="updateForm" class="d-inline">
+						<button type="button" class="btn btn-warning"
+							th:onclick="'return confirmAndUpdate(\'' + ${contact.cid} + '\');'">Update</button>
+					</form>
+
+
+
+					<a th:href="@{'/myuser/delete/'+${contact.cid}}"
+						class="btn btn-danger"
+						th:onclick="'return confirmDelete(\'' + ${contact.cid} + '\');'">Delete</a>
+				</div>
+
+
+
+			</div>
+
+
+		</div>
+		<h2 class="text-center" th:unless=${contact}>you can't access
+			other contacts without permission</h2>
+	</section>
 </body>
 </html>
