--- a/src/main/resources/templates/normal/updateForm.html
+++ b/src/main/resources/templates/normal/updateForm.html
@@ -1,151 +1,174 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="normal/base::layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	th:replace="normal/base::layout(~{::section})">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tiny.cloud/1/p01ucvvix72ik8dp58dg916ajnsno164u6e3250gua3kma17/tinymce/5/tinymce.min.js"
-            referrerpolicy="origin"></script>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script
+	src="https://cdn.tiny.cloud/1/p01ucvvix72ik8dp58dg916ajnsno164u6e3250gua3kma17/tinymce/5/tinymce.min.js"
+	referrerpolicy="origin"></script>
 
-    <script>
+<script>
         tinymce.init({
             selector: '#mytextarea'
         });
     </script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Contact Form</title>
-    <style>
-        body {
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #f8f9fa; /* Optional: Set a background color for the page */
-        }
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+	rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
+<title>Contact Form</title>
+<style>
+body {
+	min-height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #f8f9fa;
+	/* Optional: Set a background color for the page */
+}
 
-        .container {
-            max-width: 1000px; /* Adjust the maximum width of the form container as needed */
-            width: 100%;
-        }
-    </style>
+.container {
+	max-width: 1000px;
+	/* Adjust the maximum width of the form container as needed */
+	width: 100%;
+}
+</style>
 
 </head>
 <body>
-<section>
-    <div class="container">
-        <div class="d-flex justify-content-center h-100">
-            <div class="card">
-                <div class="card-header">
-                    <h3 class="text-center">Update contact</h3>
-                </div>
+	<section>
+		<div class="container">
+			<div class="d-flex justify-content-center h-100">
+				<div class="card">
+					<div class="card-header">
+						<h3 class="text-center">Update contact</h3>
+					</div>
 
-                <form novalidate="novalidate" th:action="@{/myuser/update-contact}" th:object="${contact}" enctype="multipart/form-data"
-                      method="post">
+					<form novalidate="novalidate" th:action="@{/myuser/update-contact}"
+						th:object="${contact}" enctype="multipart/form-data" method="post">
 
-                    <!-- Hidden Field for Contact ID -->
-                    <input type="hidden" th:field="*{cid}"/>
+						<!-- Hidden Field for Contact ID -->
+						<input type="hidden" th:field="*{cid}" />
 
-                    <!-- Name Card -->
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <i class="material-icons">account_circle</i> Name
-                            </h5>
-                            <input type="text" class="form-control" name="name" th:value="${contact.name}" required>
-						        <div id="invalidCheck3Feedback" class="invalid-feedback" th:if="${#fields.hasErrors('name')}" th:each="e:${#fields.errors('name')}" th:text="${e}"></div>
-						    </div>
-                    </div>
+						<!-- Name Card -->
+						<div class="card mb-3">
+							<div class="card-body">
+								<h5 class="card-title">
+									<i class="material-icons">account_circle</i> Name
+								</h5>
+								<input type="text" class="form-control" name="name"
+									th:value="${contact.name}" required>
+								<div id="invalidCheck3Feedback" class="invalid-feedback"
+									th:if="${#fields.hasErrors('name')}"
+									th:each="e:${#fields.errors('name')}" th:text="${e}"></div>
+							</div>
+						</div>
 
-                    <!-- Email Card -->
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <i class="material-icons">email</i> Email
-                            </h5>
-                            <input type="email" class="form-control" name="email" th:value="${contact.email}" required>
-						        <div id="invalidCheck3Feedback" class="invalid-feedback" th:if="${#fields.hasErrors('email')}" th:each="e:${#fields.errors('email')}" th:text="${e}"></div>
-						    </div>
-                    </div>
+						<!-- Email Card -->
+						<div class="card mb-3">
+							<div class="card-body">
+								<h5 class="card-title">
+									<i class="material-icons">email</i> Email
+								</h5>
+								<input type="email" class="form-control" name="email"
+									th:value="${contact.email}" required>
+								<div id="invalidCheck3Feedback" class="invalid-feedback"
+									th:if="${#fields.hasErrors('email')}"
+									th:each="e:${#fields.errors('email')}" th:text="${e}"></div>
+							</div>
+						</div>
 
-                    <!-- Second Name Card -->
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <i class="material-icons">person</i> Second Name
-                            </h5>
-                            <input type="text" class="form-control" th:value="${contact.secondName}" th:classappend="${#fields.hasErrors('secondName') ? 'is-invalid':''}"
-                                   required>
-                            <div id="invalidCheck3Feedback" class="invalid-feedback"
-                                 th:each="e:${#fields.errors('secondName')}" th:text="${e}"></div>
-                        </div>
-                    </div>
+						<!-- Second Name Card -->
+						<div class="card mb-3">
+							<div class="card-body">
+								<h5 class="card-title">
+									<i class="material-icons">person</i> Second Name
+								</h5>
+								<input type="text" class="form-control"
+									th:value="${contact.secondName}"
+									th:classappend="${#fields.hasErrors('secondName') ? 'is-invalid':''}"
+									required>
+								<div id="invalidCheck3Feedback" class="invalid-feedback"
+									th:each="e:${#fields.errors('secondName')}" th:text="${e}"></div>
+							</div>
+						</div>
 
-                    <!-- Description Card -->
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <i class="material-icons">description</i> Description
-                            </h5>
-                            <textarea class="form-control" id="mytextarea"  rows="5"></textarea>
-                        </div>
-                    </div>
+						<!-- Description Card -->
+						<div class="card mb-3">
+							<div class="card-body">
+								<h5 class="card-title">
+									<i class="material-icons">description</i> Description
+								</h5>
+								<textarea class="form-control" id="mytextarea" rows="5"></textarea>
+							</div>
+						</div>
 
-                    <!-- Work Card -->
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <i class="material-icons">work</i> Work
-                            </h5>
-                            <input type="text" class="form-control" th:value="${contact.work}" th:classappend="${#fields.hasErrors('work') ? 'is-invalid':''}"
-                                   required>
-                            <div id="invalidCheck3Feedback" class="invalid-feedback"
-                                 th:if="${#fields.hasErrors('work')}" th:each="e:${#fields.errors('work')}"
-                                 th:text="${e}"></div>
-                        </div>
-                    </div>
+						<!-- Work Card -->
+						<div class="card mb-3">
+							<div class="card-body">
+								<h5 class="card-title">
+									<i class="material-icons">work</i> Work
+								</h5>
+								<input type="text" class="form-control"
+									th:value="${contact.work}"
+									th:classappend="${#fields.hasErrors('work') ? 'is-invalid':''}"
+									required>
+								<div id="invalidCheck3Feedback" class="invalid-feedback"
+									th:if="${#fields.hasErrors('work')}"
+									th:each="e:${#fields.errors('work')}" th:text="${e}"></div>
+							</div>
+						</div>
 
-                    <!-- Image Card -->
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <i class="material-icons">image</i> Image URL
-                            </h5>
-                            <input required type="file" class="form-control" id="image" name="fileimage">
-                        </div>
-                    </div>
+						<!-- Image Card -->
+						<div class="card mb-3">
+							<div class="card-body">
+								<h5 class="card-title">
+									<i class="material-icons">image</i> Image URL
+								</h5>
+								<input required type="file" class="form-control" id="image"
+									name="fileimage">
+							</div>
+						</div>
 
-                    <!-- Phone Card -->
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <i class="material-icons">phone</i> Phone
-                            </h5>
-                            <input type="tel" class="form-control" required th:value="${contact.phone}"
-                                   th:classappend="${#fields.hasErrors('phone') ? 'is-invalid':''}"
-                                   name="phone">
-                            <div id="invalidCheck3Feedback" class="invalid-feedback"
-                                 th:if="${#fields.hasErrors('phone')}" th:each="e:${#fields.errors('phone')}"
-                                 th:text="${e}"></div>
-                        </div>
-                    </div>
+						<!-- Phone Card -->
+						<div class="card mb-3">
+							<div class="card-body">
+								<h5 class="card-title">
+									<i class="material-icons">phone</i> Phone
+								</h5>
+								<input type="tel" class="form-control" required
+									th:value="${contact.phone}"
+									th:classappend="${#fields.hasErrors('phone') ? 'is-invalid':''}"
+									name="phone">
+								<div id="invalidCheck3Feedback" class="invalid-feedback"
+									th:if="${#fields.hasErrors('phone')}"
+									th:each="e:${#fields.errors('phone')}" th:text="${e}"></div>
+							</div>
+						</div>
 
-                    <div class="form-group text-center">
-                        <button type="submit" class="btn btn-success">Update Contact</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <script src="https://cdn.tiny.cloud/1/p01ucvvix72ik8dp58dg916ajnsno164u6e3250gua3kma17/tinymce/5/tinymce.min.js"
-            referrerpolicy="origin"></script>
-    <script>
+						<div class="form-group text-center">
+							<button type="submit" class="btn btn-success">Update
+								Contact</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+		<script
+			src="https://cdn.tiny.cloud/1/p01ucvvix72ik8dp58dg916ajnsno164u6e3250gua3kma17/tinymce/5/tinymce.min.js"
+			referrerpolicy="origin"></script>
+		<script>
         tinymce.init({
             selector: '#mytextarea'
         });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-</section>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+	</section>
 </body>
 </
