--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,14 +5,11 @@
 <meta charset="UTF-8" />
 <title>Home Page</title>
 <body>
-	<section
-		class="banner   ">
-		<div class="text-center ">
-		<h1 class="font-weight-bold" style="color: black;">Smart Contact Manager</h1>
-        <p style="color: black;">Start collecting your contacts in a smarter way. We provide an efficient and smarter way of handling your contacts.</p>
-		
-	
-	   <div th:style="'width: 123px; height: 34px; background: white; box-shadow: 4px 4px 1px rgba(0, 0, 0, 0.25); border-radius: 20px; text-align: center; line-height: 34px; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word; margin-left: 350px;'" class="Rectangle1">
+	<section class="banner">
+		<div class="text-center main-css">
+		<h1 class="font-weight-bold head-css" style="color: black;">Smart Contact Manager</h1>
+        <p style="color: black;">Start collecting your contacts in a smarter way. We provide an efficient and smarter way of handling your contactsBe it meetings, discussions, doing tasks and activities for various customers,Connect – Smart Contact Management will help you stay connected to your customers and grow your business. Try it Today!!.</p>
+	    <div th:style="'width: 123px; height: 34px; background: white; box-shadow: 4px 4px 1px rgba(0, 0, 0, 0.25); border-radius: 20px; text-align: center; line-height: 34px; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word; margin-left: 350px;'" class="Rectangle1">
 		    <a th:href="@{/signup}" style="text-decoration: none; text-decoration: none;color: black;">Get Started</a>
 		</div>
 		</div>
