--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -4,11 +4,34 @@
 <head>
 <meta charset="UTF-8" />
 <title>about page</title>
+
 </head>
 <body>
 	<section>
-		<h1>this is about page</h1>
-		<h1>we are building springboot project</h1>
+	 <div class="container3" style="margin-left: 360px;
+	 margin-top:150px">
+			<div class="M_card1 centered-card ">
+             <div class="content1">
+                <h2 style="font-size:70px; ">About Us</h2>
+                 <p>Smart Contact Manager is a powerful tool designed to help you efficiently manage your contacts and grow your business. Here's what it can do for you:</p>
+            <ul>
+                <li>Organize your contacts in a centralized location</li>
+                <li>Track interactions, meetings, and discussions with clients</li>
+                <li>Set reminders for important follow-ups and tasks</li>
+                <li>Customize contact profiles with relevant information</li>
+                <li>Generate reports and insights to analyze your contact activity</li>
+            </ul>
+            <p>With Smart Contact Manager, you can streamline your contact management process and focus on building stronger relationships with your clients.</p>
+                 <p style="font-size: 33px">Kindly Follow Us on Different Social Medias</p>
+                   <div class="social-media">
+                    <a class="logo-update" href="#"><img src="image/insta.jpg" alt="Instagram"></a>
+	                    <a class="logo-update" href="#"><img src="image/youtube.jpg" alt="Youtube"></a>
+	                    <a href="#"><img src="image/linked.jpg" alt="Linkedin"></a>
+	                    <a href="#"><img src="image/fb.jpg" alt="Facebook"></a>
+	                </div>
+            </div>
+        </div>
+    </div>
 	</section>
 </body>
 </html>
