--- a/src/main/resources/templates/normal/profileForm.html
+++ b/src/main/resources/templates/normal/profileForm.html
@@ -10,7 +10,7 @@
 
 		<div class="my-container " style="margin-left: 250px;">
 			<!-- Use the new class name -->
-			<div class="M_card text-center">
+			<div class="M_card1 text-center">
 				<div class="image-container">
 					<img class="My_profile_pic" style="height: 200px; width: 200px;"
 						th:src="@{'/image/'+${user.imageUrl}}" alt="user Image" />
