--- a/src/main/resources/templates/normal/updateForm.html
+++ b/src/main/resources/templates/normal/updateForm.html
@@ -20,14 +20,6 @@
 	rel="stylesheet">
 <title>Contact Form</title>
 <style>
-body {
-	min-height: 100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: #f8f9fa;
-	/* Optional: Set a background color for the page */
-}
 
 .container {
 	max-width: 1000px;
@@ -39,7 +31,7 @@ body {
 </head>
 <body>
 	<section>
-		<div class="container">
+		<div class="container2">
 			<div class="d-flex justify-content-center h-100">
 				<div class="card">
 					<div class="card-header">
