--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,6 +13,88 @@
 		    <a th:href="@{/signup}" style="text-decoration: none; text-decoration: none;color: black;">Get Started</a>
 		</div>
 		</div>
-
+		
 	</section>
+	<section>
+	 <div class="container3" style="margin-left: 360px;
+	 margin-top:150px">
+			<div class="M_card1 centered-card ">
+             <div class="content1">
+                <h2 style="font-size:70px; ">About Us</h2>
+                 <p>Smart Contact Manager is a powerful tool designed to help you efficiently manage your contacts and grow your business. Here's what it can do for you:</p>
+            <ul>
+                <li>Organize your contacts in a centralized location</li>
+                <li>Track interactions, meetings, and discussions with clients</li>
+                <li>Set reminders for important follow-ups and tasks</li>
+                <li>Customize contact profiles with relevant information</li>
+                <li>Generate reports and insights to analyze your contact activity</li>
+            </ul>
+            <p>With Smart Contact Manager, you can streamline your contact management process and focus on building stronger relationships with your clients.</p>
+                 <p style="font-size: 33px">Kindly Follow Us on Different Social Medias</p>
+                   <div class="social-media">
+                    <a class="logo-update" href="#"><img src="image/insta.jpg" alt="Instagram"></a>
+	                    <a class="logo-update" href="#"><img src="image/youtube.jpg" alt="Youtube"></a>
+	                    <a href="#"><img src="image/linked.jpg" alt="Linkedin"></a>
+	                    <a href="#"><img src="image/fb.jpg" alt="Facebook"></a>
+	                </div>
+            </div>
+        </div>
+    </div>
+	</section>
+	<section>
+	<br>
+	<br>
+	<br>
+	</section>
+	<section >
+		<div class="container">
+			<div class="d-flex justify-content-center h-100">
+				<div class="card">
+					<div class="card-header">
+						<h3 class="text-center">Login</h3>
+						<div th:if="${param.error}" class="alert alert-danger">
+							Invalid UserName and password</div>
+						<div th:if="${param.logout}" class="alert alert-success">
+							Successfully logout</div>
+					</div>
+					<div class="card-body">
+						<form th:action="@{/signin}" id="login-form" action="#"
+							th:object="${myuser}" method="post">
+							<div class="input-group form-group">
+								<div class="input-group-prepend">
+									<span class="input-group-text"><i class="fas fa-user"></i></span>
+								</div>
+								<input type="text" name="username" class="form-control"
+									placeholder="username">
+							</div>
+							<div class="input-group form-group">
+								<div class="input-group-prepend">
+									<span class="input-group-text"><i class="fas fa-key"></i></span>
+								</div>
+								<input type="password" name="password" class="form-control"
+									placeholder="password">
+							</div>
+							<div class="mb-3 form-check">
+								<input type="checkbox" id="rememberCheckbox"> <label
+									for="rememberCheckbox">Remember Me</label>
+							</div>
+							<div class="form-group text-center">
+								<input type="submit" value="Login"
+									class="btn float-right login_btn">
+							</div>
+						</form>
+					</div>
+					<div class="card-footer">
+						<div class="d-flex justify-content-center links">
+							Don't have an account? <a href="/signup">Sign Up</a>
+						</div>
+						<div class="d-flex justify-content-center">
+							<a href="#">Forgot your password?</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
 </html>
