--- a/src/main/resources/templates/normal/Show-Contact.html
+++ b/src/main/resources/templates/normal/Show-Contact.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<section>
-		<div class="container">
+		<div class="container2">
 
 			<h2 class="my-4 text-center">My Contacts</h2>
 			<form class="mb-3">
