added profile feature

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -9,7 +9,8 @@
 <body>
 	<section>
 	 <div class="container3" style="margin-left: 360px;
-	 margin-top:150px">
+	 margin-top:39.9px
+	 ">
 			<div class="M_card1 centered-card ">
              <div class="content1">
                 <h2 style="font-size:70px; ">About Us</h2>
@@ -22,13 +23,8 @@
                 <li>Generate reports and insights to analyze your contact activity</li>
             </ul>
             <p>With Smart Contact Manager, you can streamline your contact management process and focus on building stronger relationships with your clients.</p>
-                 <p style="font-size: 33px">Kindly Follow Us on Different Social Medias</p>
-                   <div class="social-media">
-                    <a class="logo-update" href="#"><img src="image/insta.jpg" alt="Instagram"></a>
-	                    <a class="logo-update" href="#"><img src="image/youtube.jpg" alt="Youtube"></a>
-	                    <a href="#"><img src="image/linked.jpg" alt="Linkedin"></a>
-	                    <a href="#"><img src="image/fb.jpg" alt="Facebook"></a>
-	                </div>
+                 <p style="font-size: 30px">Kindly Follow Us on Different Social Medias</p>
+                   
             </div>
         </div>
     </div>
