--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,15 +5,15 @@
 <meta charset="UTF-8" />
 <title>Home Page</title>
 <body>
+	<div class="radial-line" id="radialLine"></div>
 	<section class="banner">
-		<div class="text-center main-css">
-		<h1 class="font-weight-bold head-css" style="color: black;">Smart Contact Manager</h1>
-        <p style="color: black;">Start collecting your contacts in a smarter way. We provide an efficient and smarter way of handling your contactsBe it meetings, discussions, doing tasks and activities for various customers,Connect – Smart Contact Management will help you stay connected to your customers and grow your business. Try it Today!!.</p>
-	    <div th:style="'width: 123px; height: 34px; background: white; box-shadow: 4px 4px 1px rgba(0, 0, 0, 0.25); border-radius: 20px; text-align: center; line-height: 34px; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word; margin-left: 350px;'" class="Rectangle1">
-		    <a th:href="@{/signup}" style="text-decoration: none; text-decoration: none;color: black;">Get Started</a>
-		</div>
-		</div>
-		
+		<div class="text-center main-css" >
+			<h1 class="font-weight-bold head-css" style="color: black;">Smart->Contact->Manager</h1>
+		        <p style="color: black;">Start collecting your contacts in a smarter way. We provide an efficient and smarter way of handling your contactsBe it meetings, discussions, doing tasks and activities for various customers,Connect – Smart Contact Management will help you stay connected to your customers and grow your business. Try it Today!!.</p>
+				    <div th:style="'width: 123px; height: 34px; background: white; box-shadow: 4px 4px 1px rgba(0, 0, 0, 0.25); border-radius: 20px; text-align: center; line-height: 34px; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word; margin-left: 399px; margin-top:39px'" class="Rectangle1">
+					    <a th:href="@{/signup}" style="text-decoration: none; text-decoration: none;color: black;">Get Started</a>
+					</div>
+		</div>	
 	</section>
 	<section>
 	 <div class="container3" style="margin-left: 360px;
@@ -21,6 +21,7 @@
 			<div class="M_card1 centered-card ">
              <div class="content1">
                 <h2 style="font-size:70px; ">About Us</h2>
+                <br>
                  <p>Smart Contact Manager is a powerful tool designed to help you efficiently manage your contacts and grow your business. Here's what it can do for you:</p>
             <ul>
                 <li>Organize your contacts in a centralized location</li>
