--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,6 +13,33 @@ body {
   height: 60px;
   background-color: #E698A8;
 }
+.radial-line {
+        position: absolute;
+        z-index: 4;
+        width: 100%;
+        height: 2px;
+        background-image: radial-gradient(circle, rgb(255, 0, 0) 0%, rgba(0, 0, 0, 0) 70%);
+        transition: opacity 1s; /* Add a transition for smooth opacity change */
+    }
+    .transparent {
+        opacity: 0;
+    }
+#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #E698A8;
+  /* Add any other navbar styles */
+}
+#logo {
+  transition: height 0.3s ease; /* Smooth transition for logo size */
+}
+
+#logo.shrink {
+  height: 50px; /* Adjust the height as needed */
+  /* Add any other styles for the smaller logo */
+}
 
 .banner {
   display: flex;
@@ -84,6 +111,7 @@ body {
 
 .container {
 	margin-top: 50px; 
+
 	/* Adjust the margin from the top */
 	
 	 	
@@ -156,11 +184,11 @@ body {
 }
 
 .navbar {
-	z-index: 1000;
+	z-index: 2000;
 }
 /* sidebar */
 .sidebar {
-	height: 100%;
+	height: 71%;
 	width: 250px;
 	position: fixed;
 	top: 0;
@@ -218,7 +246,7 @@ body {
 
 .close-btn {
 	position: absolute;
-	top: 50px;
+	top: 59px;
 	right: 0px;
 	cursor: pointer;
 	background-color: #111;
@@ -289,6 +317,7 @@ th {
 }
 .content1 {
     text-align: center;
+      position: absolute;
 }
 .centered-card {
     position: relative;
@@ -299,13 +328,17 @@ th {
 }
 .container3 {
     position: relative;
-    height: 50vh;
+    height: 55vh;
     display: flex;
     flex-direction: column;
+  
 }
 
 .social-media {
     margin-top: 20px;
+    display:flex;
+    justify-content: center;
+    
    
 }
 
