--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -69,7 +69,7 @@
 							</div>
 							<div class="form-group text-center">
 								<input type="submit" value="Login"
-									class="btn float-right login_btn">
+									class="btn login_btn">
 							</div>
 						</form>
 					</div>
