--- a/src/main/resources/templates/normal/user_dashboard.html
+++ b/src/main/resources/templates/normal/user_dashboard.html
@@ -4,7 +4,6 @@
 <head>
 <meta charset="UTF-8" />
 <title>Dashboard Page</title>
-<link rel="stylesheet" href="/path/to/your/css/style.css">
 <!-- Link to your custom CSS file -->
 </head>
 <body>
@@ -12,10 +11,18 @@
 		class="banner2 ">
 		<div class="my-container" style="margin-left: 250px;">
 			<div class="M_card1 text-center">
-				<div class="image-container">
-					<img class="My_profile_pic" style="height: 200px; width: 200px;"
-						th:src="@{'/image/'+${user.imageUrl}}" alt="user Image" />
+				<div class="image-container" style="padding-left:272px;">
+				    <img style="height: 200px; width: 200px;" class="My_profile_pic" 
+				         alt="profile_pic"
+				         th:if="${user.imageUrl != null}"
+				         th:src="@{'data:image/jpeg;base64,' + ${user.base64Image}}" />
+				    <img  style="height: 200px; width: 200px;"class="My_profile_pic"
+				         alt="profile_pic"
+				         th:unless="${user.imageUrl != null}"
+				         th:src="/static/image/contact1.jpg" />
 				</div>
+
+
 				<div class="welcome-message">
 					<h2>
 						Welcome to Smart Contact Manager, <span th:text="${user.name}"></span>!
